# moose_desktop

moose_desktop/: CHANGELOG.rst  CMakeLists.txt  package.xml
moose_viz/: CHANGELOG.rst  CMakeLists.txt  package.xml
moose_viz/launch/: view_model.launch  view_robot.launch
