<?xml version="1.0"?>
<package>
  <name>moose_desktop</name>
  <version>0.1.0</version>
  <description>Packages for working with Moose from a ROS desktop.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/moose_desktop</url>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>moose_msgs</run_depend>
  <run_depend>moose_viz</run_depend>

  <export><metapackage/></export>
</package>
