<?xml version="1.0"?>
<package>
  <name>moose_viz</name>
  <version>0.1.1</version>
  <description>Visualization launchers and helpers for Moose.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>
  <run_depend>moose_description</run_depend>
  <run_depend>joint_state_publisher_gui</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
